# plugin-dev-guide

./: CMakeLists.txt
01/: CMakeLists.txt  DevGuidePlugin.cpp
02/: DevGuidePlugin.cpp
03/: DevGuidePlugin.cpp
04/: DevGuidePlugin.cpp
05/: DevGuidePlugin.cpp
06/: CMakeLists.txt  DevGuidePlugin.cpp
07/: BodyPositionItem.cpp  BodyPositionItem.h  DevGuidePlugin.cpp
08/: BodyPositionItem.cpp  BodyPositionItem.h
09/: BodyPositionItem.cpp  CMakeLists.txt
10/: BodyPositionItem.cpp  BodyPositionItem.h  BodyPositionItemCustomization.cpp  CMakeLists.txt
11/: BodyPositionItem.cpp  BodyPositionItem.h  BodyPositionItemRegistration.cpp  BodyPositionItemView.cpp  BodyPositionItemView.h  CMakeLists.txt  DevGuidePlugin.cpp
